[package]
name = "virgin-hub3-stats"
version = "0.1.0"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
env_logger = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4"
serde_json = "1.0"